gcc/testsuite/rust/rustc/ui/c-variadic/variadic-ffi-no-fixed-args.rs
extern {
    fn foo(...);
// { dg-error "" "" { target *-*-* } .-1 }
}

fn main() {}

